--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,7 +22,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
+  # Deployment job
   deploy:
     environment:
       name: github-pages
@@ -43,3 +43,16 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+  # Purge Cloudflare Cache after deployment
+  purge-cache:
+    environment:
+      name: github-pages
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Cloudflare Cache Purge Action
+        uses: NathanVaughn/actions-cloudflare-purge@v3.1.0
+        with:
+          cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
+          cf_auth: ${{ secrets.CLOUDFLARE_AUTH_KEY }}
