--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -68,6 +68,7 @@ jobs:
       - name: Lighthouse
         uses: foo-software/lighthouse-check-action@v12.0.1
         with:
+          outputDirectory: ${{ github.workspace }}/tmp/artifacts
           urls: 'https://links.ryanfitton.co.uk'
       - name: Upload Lighthouse artifacts
         uses: actions/upload-artifact@v4.6.2
